@@ -9,6 +9,12 @@ Breaking Changes
   * setAttachment() has been deprecated by putAttachment(). The new function
     takes the same arguments and behaves the same way. (closes #58)
 
+New Features
+
+  * You can now provide a chunk size to break your bulk docs write into
+    batches, resulting in more than one HTTP request. See the documentation for
+    `bulk()`. Closes #67.
+
 Version 0.9.0
 -------------
 
